# youtube-transcript-bot

./: README.md  project_work_hours.csv  pyproject.toml
.github/workflows/: get_transcriptions.yaml
get_youtube_transcriptions/: utils.py  youtube.py
transcripts/: 202303150053_II7UCUbxOus_quarantine__coding___5__programming__project__ideas_3gpp.txt  202303151454_WFzRy8KVcrM_build_and__deploy_a__complete__r_e_s_t__a_p_i_with__python__flask__tutorial_3gpp.txt  202303161419_Q27ihdGv_MI_datapusher+__taking_the__c_k_a_n__datastore_to_the_next_level___c_k_a_n_monthly_live_14_3gpp.txt  202305171411_pOLmD_WVY-E_why_incompetent_people_think_theyre_amazing____david__dunning_3gpp.txt  202305171548_pOLmD_WVY-E_why_incompetent_people_think_theyre_amazing____david__dunning_3gpp.txt  202310231037_J607HeLFLTg_m_e_u_s_m_a_i_o_r_e_s_a_p_r_e_n_d_i_z_a_d_o_s_n_o_m_e_r_c_a_d_o_f_i_n_a_n_c_e_i_r_o_palestra_finday_2023_3gpp.txt  202310231318_J607HeLFLTg_not_found.txt  202503111022_f3sSpOwN0SI_17_109_imoveis_de_leilao_na_caixa_no_mes_de_setembro_como_encontrar_oportunidades.txt  202503181220_zn9msYPms5g_not_found.txt  202503181221_vLCGUne6cGQ_not_found.txt
