[project]
name = "get-youtube-transcriptions"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Dornas",email = "gabrielbdornas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "youtube-transcript-api (>=0.6.3,<0.7.0)",
    "google-api-python-client (>=2.163.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "stringcase (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

